--- a/Clients/Angular/src/app/components/tangible-editor/tangible-editor.component.html
+++ b/Clients/Angular/src/app/components/tangible-editor/tangible-editor.component.html
@@ -1,5 +1,5 @@
 <div class="tangible-editor">
-    <div class="video" [ngClass]="{'visible': isInDebugMode}">
+    <div class="video" [ngClass]="{'visible': showVideoInput}">
         <canvas #videoCanvas id="video-canvas" width="640" height="480">
         </canvas>
     </div>
