--- a/Clients/Angular/src/app/components/students-list/students-list.component.html
+++ b/Clients/Angular/src/app/components/students-list/students-list.component.html
@@ -28,7 +28,7 @@
                     <button mat-raised-button class="command-button"
                         [disabled]="selection.selected.length != 1" (click)="edit()">Edit</button>
                     <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()" (click)="delete()">Delete</button>
-                    <button mat-raised-button class="command-button" [matMenuTriggerFor]="exportMenu">
+                    <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()" [matMenuTriggerFor]="exportMenu">
                         Export
                         <mat-icon>arrow_drop_down</mat-icon>
                     </button>
@@ -49,12 +49,12 @@
                 <td mat-cell *matCellDef="let record"> {{record.name}} </td>
             </ng-container>
             <ng-container matColumnDef="gender">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <th mat-header-cell *matHeaderCellDef> Gender </th>
                 <td mat-cell *matCellDef="let record"> {{record.gender}} </td>
             </ng-container>
             <ng-container matColumnDef="age">
                 <th mat-header-cell *matHeaderCellDef> Age </th>
-                <td mat-cell *matCellDef="let record"> {{record.age}} </td>
+                <td mat-cell *matCellDef="let record" class="align-right"> {{formatAge(record.age)}} </td>
             </ng-container>
             <ng-container matColumnDef="whenAdded">
                 <th mat-header-cell *matHeaderCellDef> When Added </th>
