--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -50,16 +50,15 @@
                     <mat-menu #setMenu="matMenu">
                         <button mat-menu-item (click)="setSystemDefault()">System Default</button>
                     </mat-menu>
-                    <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
+                    <button mat-raised-button class="command-button"
                         [matMenuTriggerFor]="exportMenu">
                         Export
                         <mat-icon>arrow_drop_down</mat-icon>
                     </button>
                     <mat-menu #exportMenu="matMenu">
-                        <button mat-menu-item>List</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1">Details</button>
+                        <button mat-menu-item (click)="exportList()">List</button>
+                        <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportDetails()">Details</button>
                         <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportLogs()">Logs</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1">Snapshots</button>
                     </mat-menu>
                 </div>
             </div>
