--- a/Clients/Angular/src/styles.scss
+++ b/Clients/Angular/src/styles.scss
@@ -73,3 +73,8 @@ form.editor {
 mat-form-field.fill-width {
     width: 100%;
 }
+
+.mat-grid-tile-content {
+    justify-content: flex-start !important ;
+    align-items: flex-start !important;
+ }
