--- a/Clients/Angular/src/app/components/import-dialog/import-dialog.component.scss
+++ b/Clients/Angular/src/app/components/import-dialog/import-dialog.component.scss
@@ -1,6 +1,6 @@
 .dropzone {
-    width: 80%;
-    height: 200px;
+    width: 100%;
+    height: 22rem;
     padding: 2rem;
     text-align: center;
     border: dashed 1px #666;
@@ -38,10 +38,11 @@
 }
 
 .files-list {
-    height: 260px;
+    height: 22rem;
     overflow-y: auto;
     overflow-x: hidden;
     width: 100%;
+    margin: 0 0 0 1rem;
 
     .single-file {
         display: flex;
