Work on importing robots: * Display list of robots to import * Display import progress * Perform the actual import of the robots * Allow passing of robot type to dialog * Added server-side validation checks * Added to robots list * Included password in parsed details

--- a/Clients/Angular/src/app/components/robot-import-dialog/robot-import-dialog.component.scss
+++ b/Clients/Angular/src/app/components/robot-import-dialog/robot-import-dialog.component.scss
@@ -52,3 +52,12 @@
 .error-message {
     color: red;
 }
+
+.data-list {
+    height: 15rem;
+    overflow-y: auto;
+}
+
+table.mat-table {
+    width: 100%;
+}
