--- a/Clients/Angular/src/app/components/report-settings/report-settings.component.html
+++ b/Clients/Angular/src/app/components/report-settings/report-settings.component.html
@@ -12,6 +12,12 @@
             </mat-select>
         </mat-form-field>
 
+        <div *ngIf="data.flags.length">
+            <div *ngFor="let flag of data.flags">
+                <mat-slide-toggle formControlName="{{flag.name}}">{{flag.text}}</mat-slide-toggle>
+            </div>
+        </div>
+
         <mat-form-field class="example-form-field" appearance="fill" *ngIf="data.showDateRange">
             <mat-label>Date Range</mat-label>
             <mat-date-range-input
