--- a/Clients/Angular/src/app/components/user-import-dialog/user-import-dialog.component.html
+++ b/Clients/Angular/src/app/components/user-import-dialog/user-import-dialog.component.html
@@ -21,7 +21,7 @@
         </mat-step>
         <mat-step label="Verify Data" [stepControl]="controlVerification">
             <div class="panel-content">
-                <div class="data-list">
+                <div class="data-list student-list">
                     <table mat-table [dataSource]="dataSource">
 
                         <ng-container matColumnDef="name">
@@ -39,6 +39,26 @@
                         <ng-container matColumnDef="password">
                             <th mat-header-cell *matHeaderCellDef> Password </th>
                             <td mat-cell *matCellDef="let record"> {{record.password}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="robotType">
+                            <th mat-header-cell *matHeaderCellDef> Robot Type </th>
+                            <td mat-cell *matCellDef="let record"> {{record.settings.robotType}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="toolbox">
+                            <th mat-header-cell *matHeaderCellDef> Toolbox </th>
+                            <td mat-cell *matCellDef="let record"> {{record.settings.toolbox}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="viewMode">
+                            <th mat-header-cell *matHeaderCellDef> View Mode </th>
+                            <td mat-cell *matCellDef="let record"> {{convertViewMode(record.settings.viewMode)}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="allocationMode">
+                            <th mat-header-cell *matHeaderCellDef> Allocation Mode </th>
+                            <td mat-cell *matCellDef="let record"> {{convertAllocationMode(record.settings.allocationMode)}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="robot">
+                            <th mat-header-cell *matHeaderCellDef> Robot </th>
+                            <td mat-cell *matCellDef="let record"> {{record.settings.robot}} </td>
                         </ng-container>
                         <ng-container matColumnDef="message">
                             <th mat-header-cell *matHeaderCellDef> </th>
