--- a/Clients/Angular/src/app/components/export-data/export-data.component.html
+++ b/Clients/Angular/src/app/components/export-data/export-data.component.html
@@ -1,5 +1,5 @@
 <div class="main-panel">
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-title>System Exports</mat-card-title>
         <mat-card-subtitle>These exports will extract data across the whole system.</mat-card-subtitle>
         <mat-card-content>
@@ -9,7 +9,7 @@
             </div>
         </mat-card-content>
     </mat-card>
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-title>Configuration</mat-card-title>
         <mat-card-subtitle>These exports will extract configuration settings.</mat-card-subtitle>
         <mat-card-content>
