--- a/Clients/Angular/src/app/components/robot-editor/robot-editor.component.html
+++ b/Clients/Angular/src/app/components/robot-editor/robot-editor.component.html
@@ -8,7 +8,7 @@
             Save
         </button>
     </div>
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-content>
             <mat-form-field class="fill-width">
                 <mat-label>Machine Name</mat-label>
