--- a/Clients/Angular/src/app/components/student-home/student-home.component.scss
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.scss
@@ -41,7 +41,7 @@
     width: 30px;
 }
 
-button.mat-list-item.large-button {
+button.mat-mdc-list-item.large-button {
     font-size: 5rem;
     vertical-align: middle;
     padding: auto auto;
