--- a/Clients/Angular/src/app/components/system-initialisation/system-initialisation.component.html
+++ b/Clients/Angular/src/app/components/system-initialisation/system-initialisation.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-header>
             <div mat-card-avatar class="app-icon"></div>
             <mat-card-title>Initialise System</mat-card-title>
