--- a/Clients/Angular/src/app/components/toolbox-editor/toolbox-editor.component.html
+++ b/Clients/Angular/src/app/components/toolbox-editor/toolbox-editor.component.html
@@ -8,7 +8,7 @@
             Save
         </button>
     </div>
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-content>
             <mat-grid-list cols="3" rowHeight="30px">
                 <mat-grid-tile [rowspan]="2">
