--- a/Clients/Angular/src/styles.scss
+++ b/Clients/Angular/src/styles.scss
@@ -36,7 +36,7 @@ table.data-list {
     display: inline-block;
 }
 
-.mat-raised-button.command-button {
+.mat-mdc-raised-button.command-button {
     margin: 0 0.5rem;
 }
 
