--- a/Clients/Angular/src/app/components/login/login.component.scss
+++ b/Clients/Angular/src/app/components/login/login.component.scss
@@ -1,3 +1,5 @@
+
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
     max-width: 400px;
     margin: 6rem auto;
@@ -18,6 +20,6 @@ mat-form-field {
     display: inline;
 }
 
-.mat-progress-spinner{
+.mat-mdc-progress-spinner{
     display: inline-block;
 }
