--- a/Clients/Angular/src/app/components/program-save/program-save.component.html
+++ b/Clients/Angular/src/app/components/program-save/program-save.component.html
@@ -8,7 +8,7 @@
             Save
         </button>
     </div>
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-content>
             TODO
             
