--- a/Clients/Angular/src/app/components/user-interface-editor/user-interface-editor.component.html
+++ b/Clients/Angular/src/app/components/user-interface-editor/user-interface-editor.component.html
@@ -8,7 +8,7 @@
             Save
         </button> -->
     </div>
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-content>
             <mat-form-field class="fill-width">
                 <mat-label>Key</mat-label>
@@ -37,7 +37,7 @@
         </mat-card-content>
     </mat-card>
     <br />
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-content>
             <table class="item-description">
                 <thead>
