--- a/Clients/Angular/src/app/components/user-settings/user-settings.component.html
+++ b/Clients/Angular/src/app/components/user-settings/user-settings.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" class="editor lower-3">
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-title>View</mat-card-title>
         <mat-card-content>
             <mat-form-field class="fill-width">
@@ -16,7 +16,7 @@
             </mat-form-field>
         </mat-card-content>
     </mat-card>
-    <mat-card>
+    <mat-card appearance="outlined">
         <mat-card-title>Robot</mat-card-title>
         <mat-card-content>
             <mat-form-field class="fill-width">
