--- a/Clients/Angular/src/app/components/user-settings/user-settings.component.scss
+++ b/Clients/Angular/src/app/components/user-settings/user-settings.component.scss
@@ -1,14 +1,15 @@
-.mat-form-field {
+.mat-mdc-form-field {
     margin-bottom: 1rem;
 }
 
 .categories {
+    /* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version. */
     mat-slide-toggle {
         margin: 8px 0;
         display: block;
     }
 }
 
-.mat-card {
+.mat-mdc-card {
     margin-bottom: 1rem;
 }
