--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -6,8 +6,7 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" (click)="add()">Add Robot
-                            Type</button>
+                        <button mat-raised-button color="accent" class="command-button" (click)="add()">Add Type</button>
                     </div>
                 </div>
             </div>
