--- a/Clients/Angular/src/app/components/user-settings/user-settings.component.html
+++ b/Clients/Angular/src/app/components/user-settings/user-settings.component.html
@@ -1,6 +1,9 @@
 <form [formGroup]="form" class="editor lower-3">
     <mat-card appearance="outlined">
-        <mat-card-title>View</mat-card-title>
+        <mat-card-header>
+            <mat-card-title>View</mat-card-title>
+        </mat-card-header>
+
         <mat-card-content>
             <mat-form-field class="fill-width">
                 <mat-label>Default View</mat-label>
@@ -17,7 +20,9 @@
         </mat-card-content>
     </mat-card>
     <mat-card appearance="outlined">
-        <mat-card-title>Robot</mat-card-title>
+        <mat-card-header>
+            <mat-card-title>Robot</mat-card-title>
+        </mat-card-header>
         <mat-card-content>
             <mat-form-field class="fill-width">
                 <mat-label>Type</mat-label>
