--- a/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
+++ b/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
@@ -79,20 +79,26 @@
         </mat-toolbar>
 
         <div *ngIf="hasAccess" [ngSwitch]="currentView">
-            <app-system-dashboard *ngSwitchCase="'Dashboard'" (currentItemChanged)="onItemChanged($event)"></app-system-dashboard>
+            <app-system-dashboard *ngSwitchCase="'Dashboard'" (currentItemChanged)="onItemChanged($event)">
+            </app-system-dashboard>
             <app-robots-list *ngSwitchCase="'Robots'" (currentItemChanged)="onItemChanged($event)"></app-robots-list>
             <app-logs-list *ngSwitchCase="'Logs'" (currentItemChanged)="onItemChanged($event)"></app-logs-list>
-            <app-robot-types-list *ngSwitchCase="'Robot Types'" (currentItemChanged)="onItemChanged($event)"></app-robot-types-list>
+            <app-robot-types-list *ngSwitchCase="'Robot Types'" (currentItemChanged)="onItemChanged($event)">
+            </app-robot-types-list>
             <app-users-list *ngSwitchCase="'Users'" (currentItemChanged)="onItemChanged($event)"></app-users-list>
-            <app-system-configuration *ngSwitchCase="'Configuration'" (currentItemChanged)="onItemChanged($event)"></app-system-configuration>
-            <app-user-interface-configuration *ngSwitchCase="'User Interfaces'" (currentItemChanged)="onItemChanged($event)"></app-user-interface-configuration>
+            <app-system-configuration *ngSwitchCase="'Configuration'" (currentItemChanged)="onItemChanged($event)">
+            </app-system-configuration>
+            <app-user-interface-configuration *ngSwitchCase="'User Interfaces'"
+                (currentItemChanged)="onItemChanged($event)"></app-user-interface-configuration>
             <app-export-data *ngSwitchCase="'Data'"></app-export-data>
             <div *ngSwitchDefault class="unknown-view">
                 <mat-card appearance="outlined">
-                    <mat-card-title>
-                        <mat-icon color="warn">device_unknown</mat-icon>
-                        Unknown view
-                    </mat-card-title>
+                    <mat-card-header>
+                        <mat-card-title>
+                            <mat-icon color="warn">device_unknown</mat-icon>
+                            Unknown view
+                        </mat-card-title>
+                    </mat-card-header>
                     <mat-card-content>
                         <div>
                             The view '{{currentView}}' is not a valid administrator view.
