--- a/Clients/Angular/src/app/components/system-dashboard/system-dashboard.component.html
+++ b/Clients/Angular/src/app/components/system-dashboard/system-dashboard.component.html
@@ -5,13 +5,15 @@
             There are no robots connected
         </div>
         <mat-card appearance="outlined" *ngFor="let robot of processor.robots" class="item-card">
-            <mat-card-title>
-                <mat-icon class="item-icon">lan</mat-icon>
-                {{robot.name}}
-            </mat-card-title>
-            <mat-card-subtitle class="inner-item">
-                {{robot.subType}}
-            </mat-card-subtitle>
+            <mat-card-header>
+                <mat-card-title>
+                    <mat-icon class="item-icon">lan</mat-icon>
+                    {{robot.name}}
+                </mat-card-title>
+                <mat-card-subtitle class="inner-item">
+                    {{robot.subType}}
+                </mat-card-subtitle>
+            </mat-card-header>
             <mat-card-content class="inner-item">
                 <b>Status:</b>
                 {{robot.status || 'Unknown'}}
@@ -30,13 +32,15 @@
             There are no users connected
         </div>
         <mat-card appearance="outlined" *ngFor="let user of processor.users" class="item-card">
-            <mat-card-title>
-                <mat-icon class="item-icon">{{user.student ? 'person' : 'supervisor_account'}}</mat-icon>
-                {{user.name}}
-            </mat-card-title>
-            <mat-card-subtitle class="inner-item">
-                {{user.subType}}
-            </mat-card-subtitle>
+            <mat-card-header>
+                <mat-card-title>
+                    <mat-icon class="item-icon">{{user.student ? 'person' : 'supervisor_account'}}</mat-icon>
+                    {{user.name}}
+                </mat-card-title>
+                <mat-card-subtitle class="inner-item">
+                    {{user.subType}}
+                </mat-card-subtitle>
+            </mat-card-header>
             <mat-card-content *ngIf="user.student" class="inner-item">
                 <b>Robot:</b>
                 {{(user.robot ? user.robot.name : null) || 'None'}}
