--- a/Clients/Angular/src/styles.scss
+++ b/Clients/Angular/src/styles.scss
@@ -9,7 +9,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-table.data-list {
+div.table-container {
     width: calc(100% - 2rem);
     margin: 1rem;
 }
