--- a/Clients/Angular/src/app/components/students-list/students-list.component.html
+++ b/Clients/Angular/src/app/components/students-list/students-list.component.html
@@ -16,7 +16,8 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" [matMenuTriggerFor]="importMenu">
+                        <button mat-raised-button color="accent" class="command-button"
+                            [matMenuTriggerFor]="importMenu">
                             Import <mat-icon>arrow_drop_down</mat-icon>
                         </button>
                         <mat-menu #importMenu="matMenu">
@@ -30,58 +31,64 @@
                     Selection
                 </div>
                 <div>
-                    <button mat-raised-button class="command-button"
-                        [disabled]="selection.selected.length != 1" (click)="edit()">Edit</button>
-                    <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()" (click)="delete()">Delete</button>
+                    <button mat-raised-button class="command-button" [disabled]="selection.selected.length != 1"
+                        (click)="edit()">Edit</button>
+                    <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
+                        (click)="delete()">Delete</button>
                     <button mat-raised-button class="command-button" [matMenuTriggerFor]="exportMenu">
                         Export
                         <mat-icon>arrow_drop_down</mat-icon>
                     </button>
                     <mat-menu #exportMenu="matMenu">
                         <button mat-menu-item (click)="exportList()">List</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportDetails()">Details</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportLogs()">Logs</button>
+                        <button mat-menu-item [disabled]="selection.selected.length != 1"
+                            (click)="exportDetails()">Details</button>
+                        <button mat-menu-item [disabled]="selection.selected.length != 1"
+                            (click)="exportLogs()">Logs</button>
                         <!-- <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportSnapshots()">Snapshots</button> -->
                     </mat-menu>
                 </div>
             </div>
         </div>
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
 
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let record"> {{record.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="gender">
-                <th mat-header-cell *matHeaderCellDef> Gender </th>
-                <td mat-cell *matCellDef="let record"> {{record.gender}} </td>
-            </ng-container>
-            <ng-container matColumnDef="age">
-                <th mat-header-cell *matHeaderCellDef> Age </th>
-                <td mat-cell *matCellDef="let record" class="align-right"> {{formatAge(record.age)}} </td>
-            </ng-container>
-            <ng-container matColumnDef="whenAdded">
-                <th mat-header-cell *matHeaderCellDef> When Added </th>
-                <td mat-cell *matCellDef="let record"> {{record.whenAdded | date:'d MMM, y - h:mm:ss a'}} </td>
-            </ng-container>
-            <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox (change)="$event ? masterToggle() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-                    </mat-checkbox>
-                </th>
-                <td mat-cell *matCellDef="let row">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-                        [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-                    </mat-checkbox>
-                </td>
-            </ng-container>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let record"> {{record.name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="gender">
+                    <th mat-header-cell *matHeaderCellDef> Gender </th>
+                    <td mat-cell *matCellDef="let record"> {{record.gender}} </td>
+                </ng-container>
+                <ng-container matColumnDef="age">
+                    <th mat-header-cell *matHeaderCellDef> Age </th>
+                    <td mat-cell *matCellDef="let record" class="align-right"> {{formatAge(record.age)}} </td>
+                </ng-container>
+                <ng-container matColumnDef="whenAdded">
+                    <th mat-header-cell *matHeaderCellDef> When Added </th>
+                    <td mat-cell *matCellDef="let record"> {{record.whenAdded | date:'d MMM, y - h:mm:ss a'}} </td>
+                </ng-container>
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                        </mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
+                            [aria-label]="checkboxLabel(row)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="columns"></tr>
-            <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-        </table>
+                <tr mat-header-row *matHeaderRowDef="columns"></tr>
+                <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+            </table>
+        </div>
     </div>
     <div *ngSwitchCase="'editor'">
         <app-student-editor [item]="currentItem" (closed)="onClosed($event)"></app-student-editor>
