--- a/Clients/Angular/src/app/components/toolbox-list/toolbox-list.component.html
+++ b/Clients/Angular/src/app/components/toolbox-list/toolbox-list.component.html
@@ -17,7 +17,8 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" (click)="add()">Add Toolbox</button>
+                        <button mat-raised-button color="accent" class="command-button" (click)="add()">Add
+                            Toolbox</button>
                     </div>
                 </div>
             </div>
@@ -26,7 +27,8 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" (click)="importToolbox()">Import</button>
+                        <button mat-raised-button color="accent" class="command-button"
+                            (click)="importToolbox()">Import</button>
                     </div>
                 </div>
             </div>
@@ -46,43 +48,47 @@
                     </button>
                     <mat-menu #exportMenu="matMenu">
                         <button mat-menu-item>List</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportToolbox()">Toolbox</button>
+                        <button mat-menu-item [disabled]="selection.selected.length != 1"
+                            (click)="exportToolbox()">Toolbox</button>
                     </mat-menu>
                 </div>
             </div>
         </div>
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
 
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let record"> {{record.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="isDefault">
-                <th mat-header-cell *matHeaderCellDef> Default </th>
-                <td mat-cell *matCellDef="let record"> {{record.isDefault ? 'Yes' : ''}} </td>
-            </ng-container>
-            <ng-container matColumnDef="toolbox">
-                <th mat-header-cell *matHeaderCellDef> Toolbox </th>
-                <td mat-cell *matCellDef="let record"> {{!record.hasToolbox ? 'Missing' : ''}} </td>
-            </ng-container>
-            <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox (change)="$event ? masterToggle() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-                    </mat-checkbox>
-                </th>
-                <td mat-cell *matCellDef="let row">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-                        [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-                    </mat-checkbox>
-                </td>
-            </ng-container>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let record"> {{record.name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="isDefault">
+                    <th mat-header-cell *matHeaderCellDef> Default </th>
+                    <td mat-cell *matCellDef="let record"> {{record.isDefault ? 'Yes' : ''}} </td>
+                </ng-container>
+                <ng-container matColumnDef="toolbox">
+                    <th mat-header-cell *matHeaderCellDef> Toolbox </th>
+                    <td mat-cell *matCellDef="let record"> {{!record.hasToolbox ? 'Missing' : ''}} </td>
+                </ng-container>
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                        </mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
+                            [aria-label]="checkboxLabel(row)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="columns"></tr>
-            <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-        </table>
+                <tr mat-header-row *matHeaderRowDef="columns"></tr>
+                <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+            </table>
+        </div>
     </div>
     <div *ngSwitchCase="'editor'">
         <app-toolbox-editor [item]="currentItem" [robotType]="item" (closed)="onClosed($event)"></app-toolbox-editor>
