--- a/Clients/Angular/src/app/components/users-list/users-list.component.html
+++ b/Clients/Angular/src/app/components/users-list/users-list.component.html
@@ -30,33 +30,36 @@
     </div>
 </div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
+<div class="table-container">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
 
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let record"> {{record.name}} </td>
-    </ng-container>
-    <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef> Role </th>
-        <td mat-cell *matCellDef="let record"> {{record.role}} </td>
-    </ng-container>
-    <ng-container matColumnDef="whenAdded">
-        <th mat-header-cell *matHeaderCellDef> When Added </th>
-        <td mat-cell *matCellDef="let record"> {{record.whenAdded | date:'d MMM, y - h:mm:ss a'}} </td>
-    </ng-container>
-    <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-                [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-            </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-                [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-            </mat-checkbox>
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let record"> {{record.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef> Role </th>
+            <td mat-cell *matCellDef="let record"> {{record.role}} </td>
+        </ng-container>
+        <ng-container matColumnDef="whenAdded">
+            <th mat-header-cell *matHeaderCellDef> When Added </th>
+            <td mat-cell *matCellDef="let record"> {{record.whenAdded | date:'d MMM, y - h:mm:ss a'}} </td>
+        </ng-container>
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-</table>
+        <tr mat-header-row *matHeaderRowDef="columns"></tr>
+        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+    </table>
+</div>
